jlamontSC-test/src/objects/Snapshot__c.object
<CustomObject>
    <description>Object to store information for the Forecast Analytical Snapshot</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Giving Account&apos;s Owner</description>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SnapshotAccountOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Snapshots</relationshipLabel>
        <relationshipName>Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>General_Accounting_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Giving GAU ( vs the Parent ).</description>
        <label>General Accounting Unit</label>
        <referenceTo>rC_Giving__GAU__c</referenceTo>
        <relationshipLabel>Snapshots</relationshipLabel>
        <relationshipName>Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Giving_ID__c</fullName>
        <label>Giving ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Giving_Name__c</fullName>
        <label>Giving Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Giving_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Giving record&apos;s owner</description>
        <label>Giving Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SnapshotGivingOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Giving__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Giving</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Snapshots</relationshipLabel>
        <relationshipName>Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Include_in_Forecasts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Forecasts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_General_Accounting_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Parent GAU of the Giving Record&apos;s GAU.</description>
        <label>Parent General Accounting Unit</label>
        <referenceTo>rC_Giving__GAU__c</referenceTo>
        <relationshipLabel>Snapshots (Parent General Accounting Unit)</relationshipLabel>
        <relationshipName>SnapshotParentGAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Beginning_Yr_Forecast__c</fullName>
        <description>Forecast at the beginning of the year that will is used for budgeting purposes.</description>
        <inlineHelpText>Forecast at the beginning of the year that will is used for budgeting purposes.</inlineHelpText>
        <label>Previous Beginning Yr Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Budget_Affecting__c</fullName>
        <description>Snapshot of the Budget Affecting picklist.</description>
        <label>Previous Budget Affecting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Budget_Affecting_old__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Snapshot of Budget Affecting.  Killing this field, don&apos;t want or need a checkbox.  Appirio mistake.</description>
        <label>Previous Budget Affecting old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Closed_Amount__c</fullName>
        <description>Snapshot of Closed Amount</description>
        <label>Previous Closed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Current_Forecast__c</fullName>
        <description>Previous_Projected_Amount__c * Previous_Probability__c</description>
        <formula>Previous_Projected_Amount__c * Previous_Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Current Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Forecast__c</fullName>
        <description>Snapshot taken from Current Forecast Amount</description>
        <label>Previous Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_General_Accounting_Unit__c</fullName>
        <description>Snapshot of General Accounting Unit</description>
        <label>Previous General Accounting Unit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Probability__c</fullName>
        <description>Snapshot of Probability</description>
        <label>Previous Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Previous_ProdType1__c</fullName>
        <description>Snapshot of Giving Type</description>
        <label>Previous Giving Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_ProdType2__c</fullName>
        <description>Snapshot of Recipient</description>
        <label>Previous Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_ProdType3__c</fullName>
        <description>Snapshot of Fund Type</description>
        <label>Previous Fund Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Projected_Amount__c</fullName>
        <description>Snapshot of Projected Amount</description>
        <label>Previous Projected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Stage__c</fullName>
        <description>Snapshot of Stage</description>
        <label>Previous Stage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Source_Name__c</fullName>
        <label>Primary Campaign Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Giving_Name__c</columns>
        <columns>Created_Date_Time__c</columns>
        <columns>Primary_Campaign_Source_Name__c</columns>
        <columns>Giving_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X8_4_Capture</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>General_Accounting_Unit__c</columns>
        <columns>Giving_Name__c</columns>
        <columns>Include_in_Forecasts__c</columns>
        <columns>Previous_Beginning_Yr_Forecast__c</columns>
        <columns>Previous_Closed_Amount__c</columns>
        <columns>Previous_Current_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Created_Date_Time__c</field>
            <operation>equals</operation>
            <value>9/30/2014 12:00 AM</value>
        </filters>
        <label>8+4 Capture</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>